deploy/kubernetes/base/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8sgrpcsv
spec:
  template:
    metadata:
      labels:
        app: k8sgrpcsv
        version: v1
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: docker-secret
      containers:
      - imagePullPolicy: Always
        name: k8sgrpcsv
        image: k8sgrpcsv
        resources:
          requests:
            cpu: 2m
            memory: 50Mi
          limits:
            cpu: 4m
            memory: 100Mi
        ports:
        - containerPort: 7000
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: k8sgrpcsv
  labels:
    app: k8sgrpcsv
spec:
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
  selector:
    app: k8sgrpcsv
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8sgrpcsv
spec:
  hosts:
  - k8sgrpcsv
  http:
  - route:
    - destination:
        host: k8sgrpcsv
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: k8sgrpcsv
spec:
  host: k8sgrpcsv
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
